Move configuration to a non-checked in file.
It's bad practice to check in the file that users must change to
customize the installation for their environment. Moving the vars.sh
file to vars.sh.example - users need to copy this to vars.sh for usage.

The vars.sh script is also added to gitignore.

--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -1,5 +1,9 @@
 #!/bin/bash
 
+##
+# It is recomended to `chmod 600 stash.diy-backup.vars.sh` after copying the template.
+##
+
 # Used by the scripts for verbose logging. If not true only errors will be shown.
 STASH_VERBOSE_BACKUP=TRUE
 
