Allow for easier plugin change of the backup implementation.
Users can now define (in the config file) the type of backup they wish
to use for each step in the main backup.sh script. For example, say you
need to implement a Postgres dump using LVM instead of pg_dump you could
implement a file called stash.diy-backup.postgresql-lvm.sh and set the
BACKUP_DATABASE_TYPE variable to postgresql-lvm.

--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -4,6 +4,15 @@
 # It is recomended to `chmod 600 stash.diy-backup.vars.sh` after copying the template.
 ##
 
+# Which database backup script to use (ex: mssql, postgresql)
+BACKUP_DATABASE_TYPE=postgresql
+
+# Which filesystem backup script to use (ex: rsync)
+BACKUP_HOME_TYPE=rsync
+
+# Which archive backup script to use (ex: tar)
+BACKUP_ARCHIVE_TYPE=tar
+
 # Used by the scripts for verbose logging. If not true only errors will be shown.
 STASH_VERBOSE_BACKUP=TRUE
 
