--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -35,3 +35,8 @@ STASH_BACKUP_HOME=${STASH_BACKUP_ROOT}/stash-home/
 
 # The path to where the backup archives are stored
 STASH_BACKUP_ARCHIVE_ROOT=
+
+# PostgreSQL options
+POSTGRES_HOST=
+POSTGRES_USERNAME=
+POSTGRES_PORT=5432
