Implement gpg encrypted tar.gz archives.

--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -51,3 +51,6 @@ MYSQL_BACKUP_OPTIONS=
 HIPCHAT_URL=https://api.hipchat.com
 HIPCHAT_ROOM=
 HIPCHAT_TOKEN=
+
+# Options for the tar-gpg archive type
+STASH_BACKUP_GPG_RECIPIENT=
