DIY Backup HipChat integration

--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -40,3 +40,8 @@ STASH_BACKUP_ARCHIVE_ROOT=
 POSTGRES_HOST=
 POSTGRES_USERNAME=
 POSTGRES_PORT=5432
+
+# HipChat options
+HIPCHAT_URL=https://api.hipchat.com
+HIPCHAT_ROOM=
+HIPCHAT_TOKEN=
