--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -41,6 +41,12 @@ POSTGRES_HOST=
 POSTGRES_USERNAME=
 POSTGRES_PORT=5432
 
+# MySQL options
+MYSQL_HOST=
+MYSQL_USERNAME=
+MYSQL_PASSWORD=
+MYSQL_BACKUP_OPTIONS=
+
 # HipChat options
 HIPCHAT_URL=https://api.hipchat.com
 HIPCHAT_ROOM=
