Allow to connect to PostgreSQL database using password

--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -43,6 +43,7 @@ STASH_BACKUP_ARCHIVE_ROOT=
 # PostgreSQL options
 POSTGRES_HOST=
 POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
 POSTGRES_PORT=5432
 
 # MySQL options
