--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -1,5 +1,8 @@
 #!/bin/bash
 
+# The name of the product
+PRODUCT=
+
 ##
 # It is recomended to `chmod 600 stash.diy-backup.vars.sh` after copying the template.
 ##
