STASHDEV-8576: Changed if test to have consistency in the syntax. Added examples to database and home backup types. Commented out AWS keys. Fixed AWS region setting

--- a/stash.diy-backup.vars.sh.example
+++ b/stash.diy-backup.vars.sh.example
@@ -4,10 +4,10 @@
 # It is recomended to `chmod 600 stash.diy-backup.vars.sh` after copying the template.
 ##
 
-# Which database backup script to use (ex: mssql, postgresql, mysql)
+# Which database backup script to use (ex: mssql, postgresql, mysql, ebs-db, rds)
 BACKUP_DATABASE_TYPE=postgresql
 
-# Which filesystem backup script to use (ex: rsync)
+# Which filesystem backup script to use (ex: rsync, ebs-home)
 BACKUP_HOME_TYPE=rsync
 
 # Which archive backup script to use (ex: tar, tar-gpg)
@@ -70,16 +70,16 @@ STASH_BACKUP_GPG_RECIPIENT=
 IAM_INSTANCE_ROLE=
 
 # The access key id to use when authenticating with the AWS API.
-# Not necessary if the instance has been launched with the appropriate IAM role
-AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+# Not necessary if the instance has been launched with the appropriate IAM role or if it has been set as an environment variable
+#AWS_ACCESS_KEY_ID=
 # The access key secret to use when authenticating with the AWS API.
-# Not necessary if the instance has been launched with the appropriate IAM role
-AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+# Not necessary if the instance has been launched with the appropriate IAM role or if it has been set as an environment variable
+#AWS_SECRET_ACCESS_KEY=
 
 # The availability zone in which volumes will be created when restoring and instance
 AWS_AVAILABILITY_ZONE=`curl -s http://169.254.169.254/latest/meta-data/placement/availability-zone`
 # The region for the resources Stash is using (volumes, instances, snapshots, etc)
-AWS_REGION=`echo \"AWS_AVAILABILITY_ZONE\" | sed -e 's:\([0-9][0-9]*\)[a-z]*\$:\\1:'`"
+AWS_REGION=`echo \"${AWS_AVAILABILITY_ZONE}\" | sed -e 's:\([0-9][0-9]*\)[a-z]*\$:\\1:'`"
 
 # The ID for the volume holding the home directory
 BACKUP_HOME_DIRECTORY_VOLUME_ID=
