--- a/stash.diy-aws-backup.vars.sh.example
+++ b/stash.diy-aws-backup.vars.sh.example
@@ -52,6 +52,9 @@ AWS_REGION="`echo \"${AWS_AVAILABILITY_ZONE}\" | sed -e 's:\([0-9][0-9]*\)[a-z]*
 # Example: AWS_ADDITIONAL_TAGS='{"Key":"Value"}, {"Key":"Value"}'
 AWS_ADDITIONAL_TAGS=
 
+# The number of old backups to keep
+KEEP_BACKUPS=5
+
 # The type of volume to create when restoring the home directory
 RESTORE_HOME_DIRECTORY_VOLUME_TYPE=gp2
 # Required if RESTORE_HOME_DIRECTORY_VOLUME_TYPE has been set to 'io1'. Ignored otherwise.
