--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -1,38 +1,38 @@
 #!/bin/bash
 
 ##
-# It is recomended to `chmod 600 stash.diy-aws-backup.vars.sh` after copying the template.
+# It is recomended to `chmod 600 bitbucket.diy-aws-backup.vars.sh` after copying the template.
 ##
 
 # Default options passed to 'curl' commands
 CURL_OPTIONS="-L -s -f"
 
 # Which database backup script to use (ex: ebs-collocated, rds)
-# ebs-collocated means the database data directory is located in the volume as the stash home (i.e.: the snapshot / restore of the home directory will cover it)
-# rds means your Stash instance is using an RDS instance and we need to produce a snapshot of it on backup
+# ebs-collocated means the database data directory is located in the volume as the bitbucket home (i.e.: the snapshot / restore of the home directory will cover it)
+# rds means your Bitbucket instance is using an RDS instance and we need to produce a snapshot of it on backup
 BACKUP_DATABASE_TYPE=ebs-collocated
 
 # Which filesystem backup script to use (ex: ebs-home)
-# ebs-home means the Stash home (and the database if selected ebs-collocated) will be backed up by taking a snapshot of the EBS volume
+# ebs-home means the Bitbucket home (and the database if selected ebs-collocated) will be backed up by taking a snapshot of the EBS volume
 BACKUP_HOME_TYPE=ebs-home
 
 # Used by the scripts for verbose logging. If not true only errors will be shown.
-STASH_VERBOSE_BACKUP=TRUE
+BITBUCKET_VERBOSE_BACKUP=TRUE
 
-# The base url used to access this stash instance. It cannot end on a '/'. This value can be retrieved from the admin page your Stash instance
-STASH_URL=http://localhost:7990
+# The base url used to access this bitbucket instance. It cannot end on a '/'. This value can be retrieved from the admin page your Bitbucket instance
+BITBUCKET_URL=http://localhost:7990
 
 # Used in AWS backup to tag snapshots. It cannot contain spaces and it must be under 100 characters long
-INSTANCE_NAME=stash
+INSTANCE_NAME=bitbucket
 
 # The username and password for the user used to make backups (and have this permission)
-STASH_BACKUP_USER=
-STASH_BACKUP_PASS=
+BITBUCKET_BACKUP_USER=
+BITBUCKET_BACKUP_PASS=
 
-# The path to stash home folder (with trailing /)
-STASH_HOME=/var/atlassian/application-data/stash/
-# OS level username for the account that owns the STASH_HOME (typically 'atlstash')
-STASH_UID=atlstash
+# The path to bitbucket home folder (with trailing /)
+BITBUCKET_HOME=/var/atlassian/application-data/bitbucket/
+# OS level username for the account that owns the BITBUCKET_HOME (typically 'atlbitbucket')
+BITBUCKET_UID=atlbitbucket
 # The mount point for the home directory volume
 HOME_DIRECTORY_MOUNT_POINT=/media/atl
 # The device name to which the home directory volume is attached as it appears in your Amazon console
@@ -46,7 +46,7 @@ HIPCHAT_TOKEN=
 
 # The availability zone in which volumes will be created when restoring and instance.
 AWS_AVAILABILITY_ZONE=`curl ${CURL_OPTIONS} http://169.254.169.254/latest/meta-data/placement/availability-zone`
-# The region for the resources Stash is using (volumes, instances, snapshots, etc)
+# The region for the resources Bitbucket is using (volumes, instances, snapshots, etc)
 AWS_REGION="`echo \"${AWS_AVAILABILITY_ZONE}\" | sed -e 's:\([0-9][0-9]*\)[a-z]*\$:\\1:'`"
 # Additional AWS tags for EBS and RDS snapshot, tags needs to be in JSON format without enclosing square brackets:
 # Example: AWS_ADDITIONAL_TAGS='{"Key":"Value"}, {"Key":"Value"}'
