--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -72,3 +72,6 @@ RESTORE_RDS_INSTANCE_CLASS=db.r3.large
 RESTORE_RDS_SUBNET_GROUP_NAME=
 # The security group to assign to the restored instance
 RESTORE_RDS_SECURITY_GROUP=
+
+# If set to true, this param will lock the application before taking filesystem and database snapshots
+BACKUP_LOCK_BITBUCKET=false
