--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -69,3 +69,6 @@ HIPCHAT_TOKEN=
 
 # Options for the tar-gpg archive type
 BITBUCKET_BACKUP_GPG_RECIPIENT=
+
+# If set to true, this variable will lock the application before taking filesystem and database snapshots
+BACKUP_LOCK_BITBUCKET=false
