--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -70,5 +70,5 @@ HIPCHAT_TOKEN=
 # Options for the tar-gpg archive type
 BITBUCKET_BACKUP_GPG_RECIPIENT=
 
-# If set to true, this variable will lock the application before taking filesystem and database snapshots
-BACKUP_LOCK_BITBUCKET=false
+# If set to true, this variable will backup the filesystem and database without locking the application
+ZERO_DOWNTIME_BACKUP=false
