BSERVDEV-12904: Update variable names, add AWS CAC link to readme

--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -74,7 +74,7 @@ RESTORE_RDS_SUBNET_GROUP_NAME=
 RESTORE_RDS_SECURITY_GROUP=
 
 # The AWS Account ID, used when copying EBS + RDS snapshots across region
-BACKUP_AWS_ACCOUNT_ID=
+BACKUP_DEST_AWS_ACCOUNT_ID=
 
 # The following two variables are only required if you wish to copy the EBS and RDS snapshots to another region
 # If set, this variable will copy the EBS snapshot to the specified region
