BSERVDEV-12904: Fix passing variable bug
Use AWS ARNs instead of IDs where needed
Create tags independent of copying
Add method to get AWS account ID

--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -81,3 +81,6 @@ BACKUP_DEST_AWS_ACCOUNT_ID=
 BACKUP_EBS_DEST_REGION=
 # If set, this variable will copy the RDS snapshot to the specified region
 BACKUP_RDS_DEST_REGION=
+
+# If set to true, this variable will backup the filesystem and database without locking the application
+BACKUP_ZERO_DOWNTIME=false
