--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -75,6 +75,8 @@ RESTORE_RDS_SECURITY_GROUP=
 
 # The AWS Account ID, used when copying EBS + RDS snapshots across region
 BACKUP_DEST_AWS_ACCOUNT_ID=
+# The AWS Role to assume when tagging the EBS + RDS snapshots
+BACKUP_DEST_AWS_ROLE=
 
 # The following two variables are only required if you wish to copy the EBS and RDS snapshots to another region
 # If set, this variable will copy the EBS snapshot to the specified region
