BSERVDEV-12904: Split EBS + RDS copy functions
Separate EBS + RDS share and copy functions.
Remove export_args function.
Add comments for clarity
Send newest AWS command output to /dev/null
Remove returning of EBS snapshot ID
Update ZDB doc link in README

--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -84,5 +84,6 @@ BACKUP_EBS_DEST_REGION=
 # If set, this variable will copy the RDS snapshot to the specified region
 BACKUP_RDS_DEST_REGION=
 
+TODO: Add more detailed information about the consequences of setting BACKUP_ZERO_DOWNTIME=true
 # If set to true, this variable will backup the filesystem and database without locking the application
 BACKUP_ZERO_DOWNTIME=false
