BSERVDEV-13303 Added the unmount and detach volume steps to the restore methods in the ebs-home AWS implementation. Also added start and stop of the postgresql93 service to the restore methods of the ebs-collated AWS implementation. Initial commit.

--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -48,12 +48,16 @@ HIPCHAT_TOKEN=
 AWS_AVAILABILITY_ZONE=`curl ${CURL_OPTIONS} http://169.254.169.254/latest/meta-data/placement/availability-zone`
 # The region for the resources Bitbucket is using (volumes, instances, snapshots, etc)
 AWS_REGION="`echo \"${AWS_AVAILABILITY_ZONE}\" | sed -e 's:\([0-9][0-9]*\)[a-z]*\$:\\1:'`"
+
+# The AWS EC2 instance ID that the home directory EBS volume is attached to.
+AWS_EC2_INSTANCE_ID=`curl ${CURL_OPTIONS} http://169.254.169.254/latest/meta-data/instance-id`
+
 # Additional AWS tags for EBS and RDS snapshot, tags needs to be in JSON format without enclosing square brackets:
 # Example: AWS_ADDITIONAL_TAGS='{"Key":"Value"}, {"Key":"Value"}'
 AWS_ADDITIONAL_TAGS=
 
-# The number of backups to keep.  After backups are taken, all old snapshots except for the most recent ${KEEP_BACKUPS}
-# are deleted.  Set to 0 to disable cleanup of old snapshots.
+# The number of backups to keep. After backups are taken, all old snapshots except for the most recent ${KEEP_BACKUPS}
+# are deleted. Set to 0 to disable cleanup of old snapshots.
 KEEP_BACKUPS=0
 
 # The type of volume to create when restoring the home directory
