--- a/bitbucket.diy-aws-backup.vars.sh.example
+++ b/bitbucket.diy-aws-backup.vars.sh.example
@@ -35,8 +35,10 @@ BITBUCKET_HOME=/var/atlassian/application-data/bitbucket/
 BITBUCKET_UID=atlbitbucket
 # The mount point for the home directory volume
 HOME_DIRECTORY_MOUNT_POINT=/media/atl
-# The device name to which the home directory volume is attached as it appears in your Amazon console
-# Do NOT use the 'mount' command to retrieve this value as the linux device-driver might have assigned a different value
+
+# The device name to which the home directory volume is attached as it appears in your Amazon console.
+# If you have launched Bitbucket from an existing EBS snapshot, this device might be designated /dev/sdf, see
+# https://jira.atlassian.com/browse/BSERV-8477.
 HOME_DIRECTORY_DEVICE_NAME=/dev/xvdf
 
 # HipChat options
